# cs190i-gen-ai-projects

./: .gitignore  .gitmodules  README.md  pyproject.toml
MoBamba/: .gitignore  README.md  bamba-9b-v2-lora.py  bamba-9b-v2.py  bamba-inference.py  llama-full.py  llama-inference.py  llama-lora.py  llama-qlora.py  llama.py  mamba-inference.py  mamba2-780m.py  mamba2.py
MoBamba/eval/: eval_prompt.txt
MoBamba/metrics/: Llama-3.2-1B-bnb-4bit-qlora.json  Llama-3.2-1B-full.json  Llama-3.2-1B-lora.json  Llama-3.2-3B-bnb-4bit-qlora.json  Llama-3.2-3B-full.json  Llama-3.2-3B-lora.json  Mamba2-full.json  Mamba2-lora.json
MoBamba/model_outputs/: Llama-3.2-1B-bnb-4bit_2025-05-03-13-03.txt  Llama-3.2-1B-bnb-4bit_2025-05-03-14-41.txt  Llama-3.2-1B-bnb-4bit_2025-05-03-14-46.txt  Llama-3.2-3B-bnb-4bit-full_2025-05-03-12-37.txt  (+3 more)
YOLOv1/: .gitignore  README.md  config.py  data.py  datacsil.py  epoch_to_model.py  log.txt  loss.py  model.py  test.py  train.py  train_resnet.py  train_resnet.sh  train_yolo_resnet.py  train_yolo_resnet18.py  train_yolov1.sh  train_yolov1resnet.sh  train_yolov1resnet18.sh  utils.py  view_img_bbox.py  view_img_bbox_csil.py  view_metrics.py
YOLOv1/data/: .gitignore  (+2 more)
YOLOv2/: .gitignore  README.md  epoch_to_model.py  model.py  test.py  train.py  train_yolov1.sh  train_yolov1resnet.sh  train_yolov1resnet18.sh  view_img_bbox.py  view_img_bbox_csil.py  view_metrics.py
YoMAMBA/: README.md  config.py  data.py  log.txt  plot_loss_mAP.py  test.py  test_image.py  test_mAP.py  test_video.py  train.py  view_data_bbox.py  view_metrics.py  view_model_bbox.py
(+48 files in other folders)
