[project]
name = "cs190i-s25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.45.5",
    "causal-conv1d",
    "compressed-tensors>=0.9.4",
    "datasets>=3.5.0",
    "faster-coco-eval>=1.6.5",
    "flash-attn",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "peft>=0.15.2",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torchmetrics>=1.7.1",
    "torchvision>=0.21.0",
    "transformers>=4.51.3",
    "trl>=0.15.2",
    "unsloth>=2025.4.3",
]

[tool.uv.sources]
causal-conv1d = { path = "MoBamba/third-party/causal-conv1d" }
mamba-ssm = { path = "MoBamba/third-party/mamba" }
flash-attention = { path = "MoBamba/third-party/flash-attention" }
